# minimax-m2-proxy

./: .env.example  .gitignore  =0.19.0  CHINESE_CHAR_FIX_SUMMARY.md  CLAUDE.md  INVESTIGATION_PLAN.md  LICENSE  MONITORING_AGENT_README.md  README.md  ROUND_TRIP_FLOW.md  TEMPLATE_COMPLIANCE.md  minimax-m2-proxy.service  monitor_investigation_prompt.md  pyproject.toml  requirements.txt  restart_proxy.sh  run_monitor_agent.sh  setup_monitoring_schedule.sh  start_proxy.sh  test_25k_context.py  test_anthropic.py  test_anthropic_client.py  test_anthropic_force_tool.py  test_anthropic_streaming_spec.py  test_anthropic_tools.py  test_backend_raw.py  test_complete.py  test_double_think.py  test_forced_tool_call.py  test_length_issue.py  test_openai_client.py  test_parser_debug.py  test_parser_output.py  test_raw_nonstreaming.py  test_raw_proxy.py  test_raw_stream_chunks.py  test_raw_tabby.py  test_raw_think_detection.py  test_streaming_no_think.py  test_streaming_raw.py  (+6 more)
.claude/commands/: start-proxy.md
.mem-layer/: memory.db
docs/: anthropic.md  configuration.md  index.md  introduction.md  openai.md  quickstart.md  sessions.md  tool-calling.md  troubleshooting.md
formatters/: anthropic.py  openai.py
parsers/: reasoning.py  streaming.py  tools.py  validation.py
proxy/: client.py  config.py  main.py  message_transformer.py  models.py
scripts/: proxy.sh
tests/: conftest.py  diagnostic_chinese_chars.py  e2e_test.py  test_multi_turn_anthropic.py  test_multi_turn_openai.py  test_parsers.py  test_streaming_parser_logic.py  test_tool_calling.py
tests/unit/: test_tools.py  (+7 more)
(+3 files in other folders)
